cc-base/main/default/objects/Lead/fields/Application_URL__c.field-meta.xml
<CustomField>
    <fullName>Application_URL__c</fullName>
    <description>Job applicaton URL</description>
    <inlineHelpText>Provide a link to the job description or application link</inlineHelpText>
    <label>Application URL</label>
    <type>Url</type>
</CustomField>