cc-base/main/default/objects/Lead/fields/Connected_on_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>Connected_on_LinkedIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connected on LinkedIn?</label>
    <type>Checkbox</type>
</CustomField>