cc-base/main/default/objects/Lead/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <description>Job description field</description>
    <inlineHelpText>Enter in the job description</inlineHelpText>
    <label>Job Description</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>