cc-base/main/default/objects/Lead/recordTypes/Job_Lead.recordType-meta.xml
<RecordType>
    <fullName>Job_Lead</fullName>
    <active>true</active>
    <businessProcess>Job Lead Process</businessProcess>
    <description>Managing Job Leads</description>
    <label>Job Lead</label>
</RecordType>